# JauAuth

./: Cargo.toml
mcp-server/src/: index.ts
src/: backend_manager.rs  backend_manager_v2.rs  dashboard.rs  dashboard_v2.rs  mcp_api.rs  server_loader.rs  server_store.rs  simple_router.rs  web.rs
